[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/specialEffects.tscn" type="PackedScene" id=1]
[ext_resource path="res://script/homingbomb.gd" type="Script" id=2]

[node name="BleedingFire" type="KinematicBody2D"]
scale = Vector2( 2, 3 )
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="SpecialEffect" parent="." instance=ExtResource( 1 )]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Tween" type="Tween" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
